src/styles/layout/_nugget_table_view_layout.sass
#nuggetTableView
  align-items: start
  align-self: stretch
  display: grid
  grid-template-rows: minmax(10px, 1fr)

  > .entities
    display: grid
    height: 100%
    overflow-x: auto
    overflow-y: visible

    .table
      border-collapse: collapse
      table-layout: fixed

      .header,
      .content
        .row
          height: 40px

          &.selected
            position: relative

          .cell
            box-sizing: border-box
            padding: 0 $gutter * 5
            position: relative
            white-space: nowrap

            &.subscribe
              .check-box
                margin: 0 auto

            .tooltip
              position: absolute

        &.header
          .cell
            p
              overflow: visible

            .title-container
              display: grid
              grid-column-gap: $gutter * 2
              justify-content: center

            &.active
              .title-container
                align-items: center
                grid-template-columns: auto 10px

                .icon
                  display: grid

        &.content
          .cell
            text-align: center

            &.pace,
            &.tags
              box-sizing: border-box
              padding: $gutter

              .pace-card
                padding: $gutter 0
                width: 85px

            &.tags
              align-items: center
              grid-auto-flow: column
              grid-column-gap: $gutter
              height: 100%

              .tag-card
                box-sizing: border-box
                display: inline-block
                margin-right: $gutter
                padding: $gutter $gutter * 3
                text-align: center

            p
              overflow: hidden
              text-overflow: ellipsis

